--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ layout: true
 ## Twitter data on EAT-Lancet and yes2meat
 
 - List of original tweets that contain “EAT-Lancet” (or similar) or “yes2meat” from Twitter search interface (Dec 2018 - April 2019):
-  - 7281 EAT-Lancet tweets, 8586 ye2smeat tweets, 347 tweets mention both
+  - 7281 EAT-Lancet tweets, 8586 yessmeat tweets, 347 tweets mention both
 - Tweet metadata from Twitter API: retweets, links, user profile (4278 users)
   - User profiles and self-description from Twitter API
   - Retrieved list of accounts they follow: 4.9 Million follower links
@@ -905,14 +905,6 @@ layout: true
 
 ---
 
-## Disclosure tendency effect
-
-&lt;img src="figures/alters2.png" width="1100" style="display: block; margin: auto;" /&gt;
-
-- Simulated disclosure: Prediction error decreases with disclosure tendency
-
----
-  
 ## Shadow profiles after leaving a social network
 
 &lt;img src="figures/Shadow2.png" width="800" style="display: block; margin: auto;" /&gt;
